test_rcs/php-apache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: kube-system
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: php-apache
