test_rcs/pod-php-apache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
  namespace: kube-system
spec:
  ports:
  - port: 8989
    targetPort: 8989
  selector:
    name: nginxservice
